--- a/01. PARTIE LEGISLATIVE/Article L2100-1 - 29332221.md
+++ b/01. PARTIE LEGISLATIVE/Article L2100-1 - 29332221.md
@@ -7,7 +7,7 @@ assurer :
 
 2° L'exécution des services de transport utilisant ce réseau ; 
 
-3° L'exploitation des infrastructures de service reliées à ce réseau. 
+3° L'exploitation des installations de service reliées à ce réseau. 
 
 Le système de transport ferroviaire concourt au service public ferroviaire et à la solidarité nationale ainsi qu'au
 développement du transport ferroviaire, dans un souci de développement durable. Il participe à la dynamique, à l'irrigation
@@ -17,10 +17,10 @@ la première partie du présent code.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 1
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L2122-1 (V)
+	  - Code des transports - art. L2122-1
