--- a/01. PARTIE LEGISLATIVE/Article L2100-2 - 29332223.md
+++ b/01. PARTIE LEGISLATIVE/Article L2100-2 - 29332223.md
@@ -21,7 +21,7 @@ sécurité, l'efficience économique et environnementale, la fiabilité, le dév
 l'interopérabilité ; 
 
 5° La programmation des investissements de développement et de renouvellement du réseau ferroviaire défini à l'article L.
-2122-1 et des investissements relatifs aux infrastructures de service et aux interfaces intermodales ; 
+2122-1 et des investissements relatifs aux installations de service et aux interfaces intermodales ; 
 
 6° La complémentarité entre les services de transport ferroviaire à grande vitesse, d'équilibre du territoire et d'intérêt
 régional, en vue de satisfaire aux objectifs d'un aménagement et d'un développement équilibrés et harmonieux des territoires
@@ -33,9 +33,9 @@ et du report modal.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 1
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 1
 
 	**Cité par**:
 
