--- a/01. PARTIE LEGISLATIVE/Article L2100-4 - 29332228.md
+++ b/01. PARTIE LEGISLATIVE/Article L2100-4 - 29332228.md
@@ -1,9 +1,8 @@
 # Article L2100-4
 
 Il est institué auprès de SNCF Réseau un comité des opérateurs du réseau, composé de représentants des entreprises
-ferroviaires, des exploitants d'infrastructures de service reliées au réseau ferré national, des autorités organisatrices de
-transport ferroviaire, des personnes autorisées à demander des capacités d'infrastructure ferroviaire et des personnes
-mentionnées au dernier alinéa de l'article L. 2111-1. 
+ferroviaires, des exploitants d'installations de service reliées au réseau ferré national, des autorités organisatrices de
+transport ferroviaire, des autres candidats et des personnes mentionnées au dernier alinéa de l'article L. 2111-1. 
 
 SNCF Réseau en assure le secrétariat. 
 
@@ -26,18 +25,18 @@ Le comité se réunit au moins quatre fois par an et à l'initiative de SNCF Ré
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 1
-
 	**Cité par**:
 
 	  - Décret n°2015-844 du 10 juillet 2015 - art. 1 (V)
 	  - Décret n°2015-844 du 10 juillet 2015 - art. 7 (V)
 	  - Arrêté du 26 août 2016 - art. (V)
 
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 1
+
 	**Cite**:
 
-	  - Code des transports - art. L2111-1, v. 1.1 (VT)
-	  - Code des transports - art. L2111-10 (VD)
+	  - Code des transports - art. L2111-1
+	  - Code des transports - art. L2111-10 (V)
 	  - Code des transports - art. L2134-1 (V)
