--- a/01. PARTIE LEGISLATIVE/Article L2111-10 - 23084714.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-10 - 23084714.md
@@ -55,6 +55,9 @@ l'infrastructure, y compris l'amortissement des investissements et la rémunéra
 SNCF Réseau établit la méthode d'imputation du coût complet aux différentes catégories de services offerts aux entreprises
 ferroviaires. 
 
+SNCF Réseau s'assure de la cohérence de son plan d'entreprise mentionné à l'article L. 2122-7-1 avec les dispositions du
+contrat. Il aligne la période du plan d'entreprise avec celle d'exécution du contrat. 
+
 Les conditions d'application du présent article sont fixées par un décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
@@ -85,4 +88,8 @@ Les conditions d'application du présent article sont fixées par un décret en 
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 2
+
+	**Cite**:
+
+	  - Code des transports - art. L2122-7-1 (V)
