--- a/01. PARTIE LEGISLATIVE/Article L2111-11 - 23084710.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-11 - 23084710.md
@@ -13,8 +13,8 @@ stipulations de nature à garantir le respect des impératifs de sécurité et d
 
 Les modalités d'application du présent article sont fixées par voie réglementaire, afin notamment de préciser les conditions
 qui garantissent la cohérence des missions confiées au cocontractant avec celles qui incombent à SNCF Réseau, ainsi que les
-modalités de rémunération du cocontractant ou de perception par ce dernier des redevances liées à l'utilisation de
-l'infrastructure nouvelle. 
+modalités de rémunération du cocontractant ou de perception par ce dernier des redevances d'utilisation de l'infrastructure
+nouvelle. 
 
 Par dérogation au I de l'article 18 de la loi n° 85-704 du 12 juillet 1985 relative à la maîtrise d'ouvrage publique et à ses
 rapports avec la maîtrise d'œuvre privée, SNCF Réseau peut confier par contrat, à un groupement de personnes de droit privé
@@ -27,7 +27,7 @@ ou à une personne de droit privé, une mission portant à la fois sur l'établi
 	  - Loi n°85-704 du 12 juillet 1985 - art. 18
 	  - Loi n°93-122 du 29 janvier 1993
 	  - Ordonnance n°2004-559 du 17 juin 2004
-	  - Ordonnance n°2009-864 du 15 juillet 2009 (V)
+	  - Ordonnance n°2009-864 du 15 juillet 2009
 
 	**Codifié par**:
 
@@ -55,4 +55,4 @@ ou à une personne de droit privé, une mission portant à la fois sur l'établi
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 2
