--- a/01. PARTIE LEGISLATIVE/Article L2111-24 - 23084672.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-24 - 23084672.md
@@ -2,9 +2,9 @@
 
 Les ressources de SNCF Réseau sont constituées par :
 
-1° Les redevances liées à l'utilisation du réseau ferré national ;
+1° Les redevances d'infrastructure liées à l'utilisation du réseau ferré national ;
 
-2° Les autres produits liés aux biens qui lui sont apportés ou qu'il acquiert ;
+2° Les autres produits liés aux biens dont il est propriétaire ;
 
 3° Les concours financiers de l'Etat, eu égard à la contribution des infrastructures ferroviaires à la vie économique et
 sociale de la nation, au rôle qui leur est imparti dans la mise en œuvre du droit au transport et à leurs avantages en ce qui
@@ -14,8 +14,8 @@ concerne l'environnement, la sécurité et l'énergie ;
 
 5° Tous autres concours publics. 
 
-SNCF Réseau peut, dès sa création, procéder à une offre au public de titres financiers et émettre tout titre représentatif
-d'un droit de créance.
+SNCF Réseau peut, procéder à une offre au public de titres financiers et émettre tout titre représentatif d'un droit de
+créance.
 
 **Liens relatifs à cet article**
 
@@ -25,9 +25,9 @@ d'un droit de créance.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 2
 
 	**Cité par**:
 
-	  - Code des transports - art. L2111-18 (VD)
+	  - Code des transports - art. L2111-18 (V)
 	  - Code des transports - art. L2111-25 (VD)
