--- a/01. PARTIE LEGISLATIVE/Article L2111-9 - 23084718.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-9 - 23084718.md
@@ -13,14 +13,13 @@ tarification de cette infrastructure ;
 
 4° Le développement, l'aménagement, la cohérence et la mise en valeur du réseau ferré national ; 
 
-5° La gestion des infrastructures de service dont il est propriétaire et leur mise en valeur. 
+5° La gestion des installations de service dont il est propriétaire et leur mise en valeur. 
 
 SNCF Réseau est le gestionnaire du réseau ferré national. Sa gestion vise à une utilisation optimale du réseau ferré
-national, dans des objectifs de sécurité, de qualité de service et de maîtrise des coûts et dans des conditions assurant
-l'indépendance des fonctions mentionnées au 1°, garantissant une concurrence libre et loyale et l'absence de toute
-discrimination entre les entreprises ferroviaires. 
+national, dans des objectifs de sécurité, de qualité de service et de maîtrise des coûts et dans les conditions fixées à
+l'article L. 2122-4-3.
 
-Pour des lignes à faible trafic ainsi que pour les infrastructures de service, SNCF Réseau peut confier par convention
+Pour des lignes à faible trafic ainsi que pour les installations de service, SNCF Réseau peut confier par convention
 certaines de ses missions, à l'exception de celles mentionnées au 1°, à toute personne, selon les objectifs et principes de
 gestion qu'il définit.
 
@@ -66,7 +65,6 @@ gestion qu'il définit.
 	  - Code des transports - art. L2111-1 (VD)
 	  - Code des transports - art. L2111-10 (V)
 	  - Code des transports - art. L2111-16-2 (VD)
-	  - Code des transports - art. L2111-16-3 (VD)
 	  - Code des transports - art. L2111-2 (VD)
 	  - Code des transports - art. L2111-3 (V)
 	  - Code des transports - art. L2132-13 (Ab)
@@ -77,4 +75,8 @@ gestion qu'il définit.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 2
+
+	**Cite**:
+
+	  - Code des transports - art. L2122-4-3 (V)
