--- a/01. PARTIE LEGISLATIVE/Article L2122-1 - 23084600.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-1 - 23084600.md
@@ -1,14 +1,10 @@
 # Article L2122-1
 
 Pour l'application du présent chapitre, le réseau ferroviaire est composé du réseau ferré national et des lignes ferroviaires
-ouvertes à la circulation publique qui lui sont reliées, y compris les lignes d'accès aux ports et aux terminaux desservant
-ou pouvant desservir plus d'un utilisateur final.
+ouvertes à la circulation publique qui lui sont reliées, y compris les lignes d'accès aux installations de service ou celles
+desservant ou pouvant desservir plus d'un client final.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), alinéa 1, paragraphe I
 
 	**Cité par**:
 
@@ -22,7 +18,7 @@ ou pouvant desservir plus d'un utilisateur final.
 	  - Décret n°2016-1468 du 28 octobre 2016 (V)
 	  - Code des transports - art. L1261-20 (V)
 	  - Code des transports - art. L2100-1 (V)
-	  - Code des transports - art. L2100-2 (VD)
+	  - Code des transports - art. L2100-2 (V)
 	  - Code des transports - art. L2123-1 (V)
 	  - Code des transports - art. L2131-5 (T)
 	  - Code des transports - art. L2132-1 (M)
@@ -30,6 +26,10 @@ ou pouvant desservir plus d'un utilisateur final.
 	  - Code des transports - art. L2151-2 (V)
 	  - Code des transports - art. L2221-8 (V)
 	  - Code des transports - art. R1211-1 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Codifié par**:
 
