--- a/01. PARTIE LEGISLATIVE/Article L2122-10 - 23084578.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-10 - 23084578.md
@@ -1,7 +1,11 @@
 # Article L2122-10
 
 Pour exercer une activité de transport sur le réseau ferroviaire, les entreprises doivent être titulaires d'une licence
-d'entreprise ferroviaire délivrée dans des conditions fixées par décret en Conseil d'Etat.
+d'entreprise ferroviaire délivrée dans des conditions fixées par décret en Conseil d'Etat. 
+
+Le présent article ne s'applique pas aux entreprises dont les activités sont limitées à la seule fourniture de services de
+navettes pour véhicules routiers circulant uniquement sur la liaison fixe transmanche mentionnée à l'article L. 2111-8 ou qui
+exploitent uniquement des services urbains ou suburbains de transport de voyageurs.
 
 **Liens relatifs à cet article**
 
@@ -13,6 +17,14 @@ d'entreprise ferroviaire délivrée dans des conditions fixées par décret en C
 	  - Code des transports - art. L1421-5 (VD)
 	  - Code des transports - art. L1422-6 (VD)
 	  - Code des transports - art. L5352-3 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
+
+	**Cite**:
+
+	  - Code des transports - art. L2111-8 (V)
 
 	**Codifié par**:
 
