--- a/01. PARTIE LEGISLATIVE/Article L2122-13 - 23084572.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-13 - 23084572.md
@@ -1,8 +1,6 @@
 # Article L2122-13
 
-Les redevances pour les prestations offertes sur les infrastructures de service ne peuvent être supérieures au coût de la
-prestation, majoré d'un bénéfice raisonnable. Ces redevances incitent les gestionnaires d'infrastructure à utiliser de
-manière optimale leurs ressources et les technologies disponibles.
+Les modalités d'application de la présente section sont fixées par voie réglementaire.
 
 **Liens relatifs à cet article**
 
@@ -12,4 +10,4 @@ manière optimale leurs ressources et les technologies disponibles.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
