--- a/01. PARTIE LEGISLATIVE/Article L2122-2 - 23084598.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-2 - 23084598.md
@@ -1,9 +1,17 @@
 # Article L2122-2
 
-SNCF Réseau et les titulaires de délégation de service public mentionnés aux articles L. 2111-11 et L. 2111-12 répartissent,
-chacun en ce qui le concerne, les capacités d'utilisation des infrastructures du réseau ferré national, dans les conditions
-prévues par décret en Conseil d'Etat. Ce décret précise notamment les règles de priorité dont bénéficient les services de
-fret ferroviaire en provenance et à destination des ports.
+I.-Ne sont pas soumises aux dispositions de la section 2 du présent chapitre, du II de l'article L. 2122-9 et des articles L.
+2122-11 à L. 2122-13 les lignes destinées uniquement à l'exploitation de services ferroviaires urbains ou suburbains et les
+lignes qui ne sont utilisées, pour des services ferroviaires de marchandises, que par une seule entreprise ferroviaire qui ne
+réalise pas de services de transport ferroviaire à l'échelle nationale, tant qu'aucun autre candidat ne demande à utiliser
+une capacité sur ces lignes. 
+
+II.-Ne sont pas soumises aux dispositions de la section 2 du présent chapitre, à l'exception de son article L. 2122-4-3 et
+des articles L. 2122-11 à L. 2122-13, les infrastructures ferroviaires locales dont la liste est fixée par arrêté du ministre
+chargé des transports pris après notification à la Commission européenne et décision prise par celle-ci constatant l'absence
+d'importance stratégique pour le marché ferroviaire européen selon les critères fixés à l'article 2, paragraphe 4, de la
+directive 2012/34/ UE du Parlement européen et du Conseil du 21 novembre 2012 établissant un espace ferroviaire unique
+européen (refonte).
 
 **Liens relatifs à cet article**
 
@@ -13,8 +21,10 @@ fret ferroviaire en provenance et à destination des ports.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L2111-11
+	  - Code des transports - art. L2122-11 (V)
+	  - Code des transports - art. L2122-4-3 (V)
+	  - Code des transports - art. L2122-9 (V)
