--- a/01. PARTIE LEGISLATIVE/Article L2122-4-1 - 29332809.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-4-1 - 29332809.md
@@ -1,20 +1,17 @@
 # Article L2122-4-1
 
-L'article 226-13 du code pénal s'applique à la divulgation, à toute personne étrangère aux services du gestionnaire
-d'infrastructure responsables de la répartition des capacités et de la tarification de l'infrastructure, d'informations
-d'ordre économique, commercial, industriel, financier ou technique dont la divulgation est de nature à porter atteinte aux
-règles d'une concurrence libre et loyale et de non-discrimination imposées par la loi. La liste des informations concernées
-est déterminée par voie réglementaire. Le présent article ne s'applique pas à la communication des informations nécessaires à
-l'accomplissement de leurs missions aux services responsables de l'accès à l'infrastructure d'autres gestionnaires de
-l'infrastructure, sur le territoire national ou sur le territoire d'un autre Etat membre de l'Union européenne. Il ne
-s'applique pas non plus à la communication des informations aux fonctionnaires et agents chargés de la tutelle du
-gestionnaire d'infrastructure.
+Les capacités de l'infrastructure disponibles sont réparties par le gestionnaire d'infrastructure ou, en cas de pluralité de
+gestionnaires, par celui qui exerce la fonction de répartition. SNCF Réseau et les titulaires de délégation de service public
+mentionnés aux articles L. 2111-11 et L. 2111-12 répartissent, chacun en ce qui le concerne, les capacités d'utilisation des
+infrastructures du réseau ferré national. 
+
+Les principes et les procédures générales applicables à la répartition des capacités de l'infrastructure ferroviaire sont
+fixés par décret, sans préjudice des actes des commissions intergouvernementales compétentes. 
+
+Ce décret précise notamment les règles de priorité applicables sur les infrastructures déclarées saturées et en particulier
+celles dont bénéficient les services de fret ferroviaire en provenance et à destination des ports.
 
 **Liens relatifs à cet article**
-
-	**Créé par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
 
 	**Cité par**:
 
@@ -22,14 +19,10 @@ gestionnaire d'infrastructure.
 	  - Décret n°2015-139 du 10 février 2015 - art. 6 (VD)
 	  - Code des transports - art. L2111-16-2 (VD)
 
-	**Liens**:
+	**Modifié par**:
 
-	  - TRANSFERE: ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Cite**:
 
-	  - Code pénal - art. 226-13 (V)
-
-	**Nouveaux textes**:
-
-	  - Code des transports - art. L2122-4-4, v. 0.1 (V)
+	  - Code des transports - art. L2111-11 (V)
