--- a/01. PARTIE LEGISLATIVE/Article L2122-9 - 23084580.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-9 - 23084580.md
@@ -1,11 +1,10 @@
 # Article L2122-9
 
-Les entreprises ferroviaires autorisées à exploiter des services de transport ont, dans des conditions équitables et sans
-discrimination, un droit d'accès à l'ensemble du réseau ferroviaire, y compris pour l'accès par le réseau aux infrastructures
-de services, ainsi que, lorsqu'il n'existe pas d'autre possibilité d'accès dans des conditions économiques raisonnables, aux
-services que ces infrastructures permettent de leur fournir. Les demandes d'accès aux infrastructures de service et aux
-prestations qui y sont offertes sont traitées dans un délai raisonnable, fixé par l'Autorité de régulation des activités
-ferroviaires.
+I.-Les entreprises ferroviaires autorisées à exploiter des services de transport ont, dans des conditions équitables,
+transparentes et sans discrimination, un droit d'accès à l'ensemble du réseau ferroviaire. 
+
+II.-Les conditions de délivrance des prestations minimales fournies par les gestionnaires d'infrastructure sont définies par
+voie réglementaire.
 
 **Liens relatifs à cet article**
 
@@ -23,4 +22,4 @@ ferroviaires.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
