--- a/01. PARTIE LEGISLATIVE/Article L2123-1 - 23084566.md
+++ b/01. PARTIE LEGISLATIVE/Article L2123-1 - 23084566.md
@@ -1,9 +1,11 @@
 # Article L2123-1
 
-La gestion des gares de voyageurs et des autres infrastructures de service, lorsqu'elle est effectuée par SNCF Mobilités,
-fait l'objet d'une comptabilité séparée de la comptabilité de l'exploitation des services de transport.
-
-Aucune aide publique versée à l'une de ces activités ne peut être affectée à l'autre.
+Le présent chapitre s'applique aux installations de service reliées au réseau ferroviaire mentionné à l'article L. 2122-1 et
+aux services de base fournis dans ces installations ainsi qu'aux prestations complémentaires ou connexes fournies par les
+exploitants de ces installations ou par les gestionnaires d'infrastructure, en particulier ceux énumérés aux points 2,3 et 4
+de l'annexe II de la directive 2012/34/ UE du Parlement européen et du Conseil du 21 novembre 2012 établissant un espace
+ferroviaire unique européen (refonte). La nature de ces installations, services et prestations est fixée par voie
+réglementaire.
 
 **Liens relatifs à cet article**
 
@@ -34,12 +36,8 @@ Aucune aide publique versée à l'une de ces activités ne peut être affectée 
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 4
 
-	**Liens**:
+	**Cite**:
 
-	  - TRANSFERE: ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 4
-
-	**Nouveaux textes**:
-
-	  - Code des transports - art. L2123-1-1 (V)
+	  - Code des transports - art. L2122-1 (V)
