--- a/01. PARTIE LEGISLATIVE/Article L2131-1 - 23084537.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-1 - 23084537.md
@@ -5,13 +5,18 @@ Elle concourt au suivi et au bon fonctionnement, dans ses dimensions techniques,
 transport ferroviaire national, notamment du service public et des activités concurrentielles, au bénéfice des usagers et
 clients des services de transport ferroviaire. Elle exerce ses missions en veillant au respect de la loi n° 2010-788 du 12
 juillet 2010 portant engagement national pour l'environnement, notamment des objectifs et dispositions visant à favoriser le
-développement des modes alternatifs à la route pour le transport de marchandises.
+développement des modes alternatifs à la route pour le transport de marchandises. 
+
+Sans préjudice des compétences de l'Autorité de la concurrence, elle assure le suivi de la situation de la concurrence sur
+les marchés des services ferroviaires et dispose à cette fin du droit d'accès aux informations économiques, financières et
+sociales nécessaires que lui reconnaît l'article L. 2135-2.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Loi n°2010-788 du 12 juillet 2010 (V)
+	  - Loi n°2010-788 du 12 juillet 2010
+	  - Code des transports - art. L2135-2 (VD)
 
 	**Codifié par**:
 
@@ -26,4 +31,4 @@ développement des modes alternatifs à la route pour le transport de marchandis
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (V)
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
