--- a/01. PARTIE LEGISLATIVE/Article L2132-8 - 23084503.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-8 - 23084503.md
@@ -7,6 +7,9 @@ secteur ferroviaire.
 Les membres du collège ne prennent, à titre personnel, aucune position publique sur des sujets relevant de la compétence de
 l'autorité. 
 
+Les membres du collège renouvellent chaque année la déclaration d'intérêts mentionnées à l'article 11 de la loi n° 2013-907
+du 11 octobre 2013 relative à la transparence de la vie publique, assortie d'une déclaration de bonne conduite.
+
 Sans préjudice de la possibilité, pour tout membre du collège, de se déporter dans toute affaire dans laquelle il
 l'estimerait nécessaire, aucun membre ne peut délibérer dans une affaire dans laquelle il a eu un intérêt au cours des trois
 années précédant la délibération ; cette interdiction s'applique également lorsque, au cours de la même période, un membre a
@@ -43,8 +46,9 @@ minimale de trois ans, sous peine des sanctions prévues à l'article 432-13 du 
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cite**:
 
-	  - Code pénal - art. 432-13 (V)
+	  - Code pénal - art. 432-13
