--- a/01. PARTIE LEGISLATIVE/Article L2133-2 - 23084478.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-2 - 23084478.md
@@ -1,20 +1,19 @@
 # Article L2133-2
 
 L'Autorité de régulation des activités ferroviaires est informée par tout gestionnaire d'infrastructure de son intention de
-négocier des redevances d'utilisation de l'infrastructure avec un demandeur autorisé de capacité d'infrastructure
-ferroviaire. Les tarifs négociés sont transmis à l'autorité, qui peut s'y opposer s'ils méconnaissent les dispositions du
-premier alinéa de l'article L. 2131-3 et celles de l'article L. 2131-4. L'absence d'opposition dans un délai de deux mois à
-compter de la réception des tarifs négociés vaut accord.
+négocier des redevances d'infrastructure avec un candidat. Les tarifs négociés sont transmis à l'autorité, qui peut s'y
+opposer s'ils méconnaissent les dispositions du premier alinéa de l'article L. 2131-3 et celles de l'article L. 2131-4.
+L'absence d'opposition dans un délai de deux mois à compter de la réception des tarifs négociés vaut accord.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 15 (Ab), alinéa 3, paragraphe II
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cite**:
 
-	  - Code des transports - art. L2131-3 (V)
+	  - Code des transports - art. L2131-3
 	  - Code des transports - art. L2131-4 (V)
 
 	**Codifié par**:
