--- a/01. PARTIE LEGISLATIVE/Article L2133-5 - 23084472.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-5 - 23084472.md
@@ -1,6 +1,6 @@
 # Article L2133-5
 
-L'Autorité de régulation des activités ferroviaires émet un avis conforme sur la fixation des redevances d'infrastructure
+I.-L'Autorité de régulation des activités ferroviaires émet un avis conforme sur la fixation des redevances d'infrastructure
 liées à l'utilisation du réseau ferré national au regard : 
 
 1° Des principes et des règles de tarification applicables sur ce réseau, prévus à l'article L. 2111-25 ; 
@@ -15,9 +15,13 @@ Lorsque, notamment en application d'une convention de délégation de service pu
 régulation des activités ferroviaires s'est déjà prononcée dans les conditions et selon les modalités prévues aux quatre
 premiers alinéas, l'avis visé au premier alinéa est réputé obtenu. 
 
-L'Autorité de régulation des activités ferroviaires émet un avis conforme sur la fixation des redevances relatives à l'accès
-aux gares de voyageurs et aux autres infrastructures de service ainsi qu'aux prestations régulées qui y sont fournies, au
-regard des principes et des règles de tarification applicables à ces infrastructures.
+II.-Sauf dans le cas prévu à l'article L. 5352-2, l'Autorité de régulation des activités ferroviaires émet un avis conforme
+sur la fixation des redevances relatives à l'accès aux gares de voyageurs et aux autres installations de service ainsi qu'aux
+prestations régulées qui y sont fournies, au regard des principes et des règles de tarification applicables à ces
+installations. 
+
+Lorsque les redevances sont fixées pour une période pluriannuelle, l'Autorité de régulation des activités ferroviaires émet
+son avis pour la période concernée et en cas de modifications.
 
 **Liens relatifs à cet article**
 
@@ -35,10 +39,10 @@ regard des principes et des règles de tarification applicables à ces infrastru
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cite**:
 
-	  - Code des transports - art. L2111-10 (VD)
+	  - Code des transports - art. L2111-10
 	  - Code des transports - art. L2111-11
-	  - Code des transports - art. L2111-25 (VD)
+	  - Code des transports - art. L2111-25
