--- a/01. PARTIE LEGISLATIVE/Article L2134-2 - 23084458.md
+++ b/01. PARTIE LEGISLATIVE/Article L2134-2 - 23084458.md
@@ -1,8 +1,8 @@
 # Article L2134-2
 
-Toute personne autorisée à demander des capacités d'infrastructure ferroviaire ou tout gestionnaire d'infrastructure peut
-saisir l'Autorité de régulation des activités ferroviaires dès lors qu'il s'estime victime d'un traitement inéquitable, d'une
-discrimination ou de tout autre préjudice liés à l'accès au réseau ferroviaire, et en particulier : 
+Tout candidat, tout gestionnaire d'infrastructure ou tout exploitant d'installation de service peut saisir l'Autorité de
+régulation des activités ferroviaires dès lors qu'il s'estime victime d'un traitement inéquitable, d'une discrimination ou de
+tout autre préjudice liés à l'accès au réseau ferroviaire, et en particulier : 
 
 1° Au contenu du document de référence du réseau ; 
 
@@ -10,14 +10,13 @@ discrimination ou de tout autre préjudice liés à l'accès au réseau ferrovia
 
 3° Aux conditions particulières qui lui sont faites ; 
 
-4° A l'exercice du droit d'accès au réseau et aux redevances à acquitter pour l'utilisation du réseau en application du
-système de tarification ferroviaire ; 
+4° A l'exercice du droit d'accès au réseau et à la mise en œuvre des redevances d'infrastructure à acquitter pour
+l'utilisation du réseau en application du système de tarification ferroviaire ; 
 
 5° A la surveillance exercée en matière de sécurité ferroviaire ; 
 
-6° A l'exercice du droit d'accès aux gares de voyageurs et aux autres infrastructures de service, ainsi qu'à la fourniture et
-à la tarification des prestations minimales, complémentaires ou connexes offertes sur ces gares de voyageurs et ces autres
-infrastructures de service ;
+6° A l'exercice du droit d'accès aux installations de service, y compris la fourniture et la mise en œuvre de la tarification
+des services de base fournis dans ces installations et des prestations complémentaires ou connexes ;
 
 7° A l'exécution des accords-cadres mentionnés aux articles L. 2122-6 et L. 2122-7 ainsi que des contrats d'utilisation de
 l'infrastructure ; 
@@ -53,7 +52,7 @@ son utilisation.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cite**:
 
