--- a/01. PARTIE LEGISLATIVE/Article L2135-1 - 23084449.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-1 - 23084449.md
@@ -1,5 +1,10 @@
 # Article L2135-1
 
+Sans préjudice de l'article L. 2135-8, l'Autorité de régulation des activités ferroviaires peut, soit d'office, soit à la
+demande de l'autorité administrative compétente, d'un gestionnaire d'infrastructure, d'un exploitant d'installation de
+services, d'une entreprise ferroviaire ou de toute autre personne concernée, procéder à la recherche et à la constatation des
+manquements aux obligations résultant du présent titre et des textes pris pour son application. 
+
 Sont qualifiés pour procéder, dans l'exercice de leurs fonctions, à la recherche et à la constatation des manquements aux
 obligations résultant du présent titre et des textes pris pour son application les agents de l'Autorité de régulation des
 activités ferroviaires habilités par le président de l'autorité et assermentés dans des conditions similaires à celles
@@ -20,6 +25,7 @@ concernée.
 
 	  - Loi n°2000-108 du 10 février 2000 - art. 43
 	  - Code des transports - art. L2135-4
+	  - Code des transports - art. L2135-8 (VT)
 
 	**Codifié par**:
 
@@ -27,7 +33,8 @@ concernée.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cité par**:
 
