--- a/01. PARTIE LEGISLATIVE/Article L2135-2 - 23084447.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-2 - 23084447.md
@@ -1,16 +1,23 @@
 # Article L2135-2
 
 Pour l'accomplissement de ses missions, l'Autorité de régulation des activités ferroviaires dispose d'un droit d'accès à la
-comptabilité des gestionnaires d'infrastructure, des entreprises ferroviaires et de la SNCF ainsi qu'aux informations
-économiques, financières et sociales nécessaires.
+comptabilité des gestionnaires d'infrastructure, des exploitants d'installations de service, des entreprises ferroviaires et
+des autres candidats et de la SNCF ainsi qu'aux informations économiques, financières et sociales nécessaires.
 
 Elle peut recueillir toutes les informations utiles auprès des services de l'Etat et des autorités organisant des services de
-transport ferroviaire, de l'Etablissement public de sécurité ferroviaire, des gestionnaires d'infrastructure, des entreprises
-ferroviaires et de la SNCF, ainsi qu'auprès des autres entreprises intervenant sur le marché des transports ferroviaires.
-Elle peut également entendre toute personne dont l'audition lui paraît susceptible de contribuer à son information.
+transport ferroviaire, de l'Etablissement public de sécurité ferroviaire, des gestionnaires d'infrastructure, des exploitants
+d'installations de service, des entreprises ferroviaires et des autres candidats et de la SNCF, ainsi qu'auprès des autres
+entreprises intervenant sur le marché des transports ferroviaires. Elle peut également entendre toute personne dont
+l'audition lui paraît susceptible de contribuer à son information.
 
-Les agents de l'autorité habilités par le président procèdent aux enquêtes nécessaires à l'accomplissement des missions
-confiées à l'autorité. Le président désigne toute personne compétente pour réaliser, le cas échéant, une expertise.
+L'Autorité de régulation des activités ferroviaires impartit à l'intéressé un délai raisonnable, qui ne dépasse pas un mois,
+pour la production des informations, des pièces et des documents demandés. Si les circonstances le justifient, elle peut
+autoriser une prorogation de deux semaines, qui peut être portée à un mois lorsque la production de ces informations, pièces
+ou documents nécessite un important travail de rassemblement, traitement ou mise en forme des données concernées. 
+
+Les agents de l'autorité habilités par le président procèdent aux audits comptables et aux enquêtes nécessaires à
+l'accomplissement des missions confiées à l'autorité. Le président désigne toute personne compétente pour réaliser, le cas
+échéant, un audit comptable ou une expertise.
 
 Les enquêtes donnent lieu à procès-verbal. Un double en est transmis dans les cinq jours aux parties intéressées.
 
@@ -26,10 +33,11 @@ propres à l'accomplissement de leur mission.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cité par**:
 
 	  - Code des transports - art. L2131-1 (VT)
 	  - Code des transports - art. L2135-3 (Ab)
-	  - Code des transports - art. L2135-7 (VD)
+	  - Code des transports - art. L2135-7 (V)
