--- a/01. PARTIE LEGISLATIVE/Article L2135-7 - 23084425.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-7 - 23084425.md
@@ -1,14 +1,16 @@
 # Article L2135-7
 
 La commission des sanctions de l'Autorité de régulation des activités ferroviaires peut sanctionner les manquements qu'elle
-constate de la part d'un gestionnaire d'infrastructure, d'une entreprise ferroviaire ou de la SNCF, dans les conditions
-suivantes : 
+constate de la part d'un gestionnaire d'infrastructure, d'un exploitant d'installation de service, d'une entreprise
+ferroviaire ou d'un autre candidat ou de la SNCF, dans les conditions suivantes : 
 
-1° En cas de manquement d'un gestionnaire d'infrastructure, d'une entreprise ferroviaire ou de la SNCF aux obligations lui
-incombant au titre de l'accès au réseau ou de son utilisation, notamment en cas de méconnaissance d'une règle formulée par
-l'autorité en application de l'article L. 2131-7 ou d'une décision prise par elle en application des articles L. 2133-3 et L.
-2133-4, le collège de l'autorité met en demeure l'organisme intéressé de se conformer à ses obligations dans un délai que le
-collège détermine. Il peut rendre publique cette mise en demeure. 
+1° En cas de manquement d'un gestionnaire d'infrastructure, d'un exploitant d'installation de service, de la SNCF, d'une
+entreprise ferroviaire ou d'un autre candidat aux obligations lui incombant au titre de l'accès au réseau ou de son
+utilisation, notamment en cas de méconnaissance d'une règle formulée par l'autorité en application de l'article L. 2131-7 ou
+d'une décision prise par elle en application des articles L. 2133-3 et L. 2133-4, ou en cas de non-respect par la SNCF des
+règles fixant les conditions d'exercice des missions mentionnées à l'article L. 2102-1, le collège de l'autorité met en
+demeure l'organisme intéressé de se conformer à ses obligations dans un délai que le collège détermine. Il peut rendre
+publique cette mise en demeure. 
 
 Lorsque l'intéressé ne se conforme pas à cette mise en demeure dans le délai imparti, le collège de l'autorité peut décider
 l'ouverture d'une procédure de sanction. Il notifie alors les griefs à l'intéressé et en saisit la commission des
@@ -31,15 +33,16 @@ plus élevé de l'une des sanctions encourues.
 Les sanctions pécuniaires sont recouvrées comme les créances de l'Etat étrangères à l'impôt et au domaine. Les sommes
 correspondantes sont versées à l'Agence de financement des infrastructures de transport de France ; 
 
-2° Les mêmes sanctions sont encourues lorsque le gestionnaire d'infrastructure, l'entreprise ferroviaire ou la SNCF ne s'est
-pas conformé, dans les délais requis, à une décision prise par le collège de l'autorité en application des articles L. 2134-1
-à L. 2134-3 après mise en demeure de remédier au manquement constaté restée sans effet ; 
+2° Les mêmes sanctions sont encourues lorsque le gestionnaire d'infrastructure, l'exploitant d'installation de service,
+l'entreprise ferroviaire ou un autre candidat ou la SNCF ne s'est pas conformé, dans les délais requis, à une décision prise
+par le collège de l'autorité en application des articles L. 2134-1 à L. 2134-3 après mise en demeure de remédier au
+manquement constaté restée sans effet ; 
 
-3° En cas de manquement d'un gestionnaire d'infrastructure, d'une entreprise ferroviaire, de la SNCF ou d'une autre
-entreprise exerçant une activité dans le secteur du transport ferroviaire aux obligations de communication de documents et
-d'informations prévues à l'article L. 2135-2 ou à l'obligation de donner accès à leur comptabilité, ainsi qu'aux informations
-économiques, financières et sociales prévues au même article, le collège de l'autorité met l'intéressé en demeure de s'y
-conformer dans un délai que le collège détermine. 
+3° En cas de manquement d'un gestionnaire d'infrastructure, d'un exploitant d'installation de service, de la SNCF, d'une
+entreprise ferroviaire ou d'un autre candidat, ou d'une autre entreprise exerçant une activité dans le secteur du transport
+ferroviaire aux obligations de communication de documents et d'informations prévues à l'article L. 2135-2 ou à l'obligation
+de donner accès à leur comptabilité, ainsi qu'aux informations économiques, financières et sociales prévues au même article,
+le collège de l'autorité met l'intéressé en demeure de s'y conformer dans un délai que le collège détermine. 
 
 Lorsque l'intéressé ne se conforme pas à cette mise en demeure dans le délai fixé ou fournit des renseignements incomplets ou
 erronés, le collège de l'autorité peut saisir la commission des sanctions, qui se prononce dans les conditions prévues au 1°
@@ -53,7 +56,8 @@ bis.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cité par**:
 
@@ -69,7 +73,7 @@ bis.
 	**Cite**:
 
 	  - Code de commerce - art. L420-1
-	  - Code des transports - art. L2131-7 (V)
-	  - Code des transports - art. L2133-3 (V)
+	  - Code des transports - art. L2131-7
+	  - Code des transports - art. L2133-3
 	  - Code des transports - art. L2134-1
-	  - Code des transports - art. L2135-2 (VD)
+	  - Code des transports - art. L2135-2 (V)
