--- a/01. PARTIE LEGISLATIVE/Article L2141-13 - 23084352.md
+++ b/01. PARTIE LEGISLATIVE/Article L2141-13 - 23084352.md
@@ -1,13 +1,13 @@
 # Article L2141-13
 
-Sous réserve des dispositions législatives applicables aux ouvrages déclarés d'intérêt général ou d'utilité publique,
-SNCF Mobilités  exerce tous pouvoirs de gestion sur les biens immobiliers qui lui sont remis ou qu'il acquiert. Il peut
-notamment accorder des autorisations d'occupation, consentir des baux, fixer et encaisser à son profit le montant des
-redevances, loyers et produits divers. 
+Sous réserve des dispositions législatives applicables aux ouvrages déclarés d'intérêt général ou d'utilité publique, SNCF
+Mobilités exerce tous pouvoirs de gestion sur les biens immobiliers qui lui sont remis ou qu'il acquiert. Il peut notamment
+accorder des autorisations d'occupation, consentir des baux, fixer et encaisser à son profit le montant des redevances,
+loyers et produits divers. 
 
 Il peut procéder à tous travaux de construction ou de démolition. 
 
-Il assume toutes les obligations du propriétaire. 
+Il assume toutes les obligations du propriétaire, en particulier celles prévues à l'article L. 2123-3-6. 
 
 Il agit et défend en justice aux lieu et place de l'Etat.
 
@@ -19,4 +19,8 @@ Il agit et défend en justice aux lieu et place de l'Etat.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 14
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 8
+
+	**Cite**:
+
+	  - Code des transports - art. L2123-3-6 (V)
