--- a/01. PARTIE LEGISLATIVE/Article L2144-2 - 23084279.md
+++ b/01. PARTIE LEGISLATIVE/Article L2144-2 - 23084279.md
@@ -1,12 +1,12 @@
 # Article L2144-2
 
-Les concours publics reçus par les entreprises ferroviaires au titre des missions de service public de voyageurs qui leur
-sont confiées ne peuvent être affectés à d'autres activités et doivent figurer dans les comptes correspondants. Les comptes
-sont établis de manière séparée pour chaque convention donnant lieu à des concours publics pour les exercices ouverts à
-compter du 1er janvier 2015. 
+Les fonds publics reçus par les entreprises ferroviaires au titre des missions de service public de voyageurs qui leur sont
+confiées ne peuvent être affectés à d'autres activités et doivent figurer dans les comptes correspondants. Les comptes sont
+établis de manière séparée pour chaque convention donnant lieu à des fonds publics pour les exercices ouverts à compter du
+1er janvier 2015. 
 
-Les comptes sont tenus de façon à permettre le suivi de l'interdiction de transférer des concours publics d'une activité à
-une autre.
+Les comptes sont tenus de façon à permettre le suivi de l'interdiction de transférer des fonds publics d'une activité à une
+autre.
 
 **Liens relatifs à cet article**
 
@@ -14,12 +14,12 @@ une autre.
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Modifié par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 15
-
 	**Cité par**:
 
 	  - Décret n°2015-138 du 10 février 2015 - art. 23 (V)
 	  - Décret n°2015-138 du 10 février 2015 - art. 37 (V)
 	  - Décret n°2016-327 du 17 mars 2016 - art. 14 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 12
