--- a/01. PARTIE LEGISLATIVE/Article L2232-1 - 23084169.md
+++ b/01. PARTIE LEGISLATIVE/Article L2232-1 - 23084169.md
@@ -7,8 +7,8 @@ SNCF Réseau exerce concurremment avec l'Etat les pouvoirs dévolus à ce dernie
 et à la conservation de son domaine public. 
 
 Les infractions aux dispositions du chapitre Ier peuvent en outre être constatées par les agents assermentés énumérés au I de
-l'article L. 2241-1 et par les agents assermentés des personnes agissant pour le compte de SNCF Réseau ou ayant conclu une
-convention avec SNCF Réseau en application de l'article L. 2111-9.
+l'article L. 2241-1 et par les agents assermentés des personnes ayant conclu une convention avec SNCF Réseau en application
+de l'article L. 2111-9.
 
 **Liens relatifs à cet article**
 
@@ -18,7 +18,7 @@ convention avec SNCF Réseau en application de l'article L. 2111-9.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 24
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 14
 
 	**Cite**:
 
