--- a/01. PARTIE LEGISLATIVE/Article L3114-1 - 23083949.md
+++ b/01. PARTIE LEGISLATIVE/Article L3114-1 - 23083949.md
@@ -1,13 +1,13 @@
 # Article L3114-1
 
-Les dispositions des articles L. 2241-1 (I, premier et quatrième alinéas et II) à L. 2241-7, sauf celles de l'article L.
-2241-5, sont applicables aux services de transport public routier de personnes réguliers et à la demande.
+Les dispositions des articles L. 2241-1 (I,   1°, 4° et 5° et II) à L. 2241-7, sauf celles de l'article L. 2241-5, sont
+applicables aux services de transport public routier de personnes réguliers et à la demande.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°79-475 du 19 juin 1979 - art. 9 (Ab), ecqc la recherche, la constatation et la poursuite des infractions
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 17
 
 	**Cité par**:
 
@@ -23,9 +23,9 @@ Les dispositions des articles L. 2241-1 (I, premier et quatrième alinéas et II
 
 	**Cite**:
 
-	  - Code des transports - art. L2241-1 (V)
-	  - Code des transports - art. L2241-5 (V)
-	  - Code des transports - art. L2241-7 (V)
+	  - Code des transports - art. L2241-1
+	  - Code des transports - art. L2241-5
+	  - Code des transports - art. L2241-7
 
 	**Codifié par**:
 
