--- a/01. PARTIE LEGISLATIVE/Article L5352-2 - 23080225.md
+++ b/01. PARTIE LEGISLATIVE/Article L5352-2 - 23080225.md
@@ -1,7 +1,9 @@
 # Article L5352-2
 
-L'utilisation des voies ferrées portuaires peut donner lieu au versement de redevances à l'autorité portuaire ou à ses
-éventuels délégataires. Des tarifs d'abonnement et des tarifs contractuels peuvent être prévus.
+L'utilisation des voies ferrées portuaires donne lieu au versement de redevances à l'autorité portuaire ou à ses éventuels
+délégataires dans les conditions prévues par l'article L. 2123-3-5. 
+
+La fixation des redevances mentionnées au premier alinéa n'est pas soumise aux dispositions de l'article L. 2133-5.
 
 **Liens relatifs à cet article**
 
@@ -10,6 +12,14 @@ L'utilisation des voies ferrées portuaires peut donner lieu au versement de red
 	  - Décret n°2012-70 du 20 janvier 2012 - art. 3 (V)
 	  - Code des transports - art. L2133-5 (VT)
 	  - Code des transports - art. R5352-2 (M)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 5
+
+	**Cite**:
+
+	  - Code des transports - art. L2123-3-5 (V)
 
 	**Codifié par**:
 
