--- a/01. PARTIE LEGISLATIVE/Article L5352-3 - 23080222.md
+++ b/01. PARTIE LEGISLATIVE/Article L5352-3 - 23080222.md
@@ -1,15 +1,15 @@
 # Article L5352-3
 
 Le certificat de sécurité permettant l'accès à un port vaut également pour l'utilisation des voies ferrées portuaires de ce
-port.
+port. 
 
-Les entreprises non titulaires d'un certificat de sécurité doivent, pour l'utilisation des voies ferrées portuaires, être
-agréées par le ministre chargé des transports dans des conditions fixées par décret en Conseil d'Etat, après avis conforme de
-l'Etablissement public de sécurité ferroviaire.
+Les entreprises non titulaires d'un certificat de sécurité ou de la licence d'entreprise ferroviaire prévue à l'article L.
+2122-10 doivent, pour l'utilisation des voies ferrées portuaires, être agréées par le ministre chargé des transports sur avis
+conforme de l'Etablissement public de sécurité ferroviaire saisi des éléments relatifs à la sécurité. 
 
-Ce décret précise notamment dans quels cas cet agrément vaut certificat de sécurité pour les services empruntant le réseau
-ferré national entre des voies ferrées relevant d'une même autorité portuaire ou dans les points d'échange entre le réseau
-ferré national et les voies ferrées portuaires.
+Un décret en Conseil d'Etat fixe les conditions de délivrance de cet agrément. Ce décret précise notamment dans quels cas cet
+agrément vaut certificat de sécurité pour les services empruntant le réseau ferré national entre des voies ferrées relevant
+d'une même autorité portuaire ou dans les points d'échange entre le réseau ferré national et les voies ferrées portuaires.
 
 **Liens relatifs à cet article**
 
@@ -24,6 +24,14 @@ ferré national et les voies ferrées portuaires.
 	  - Arrêté du 13 avril 2015 - art. 8 (V)
 	  - Arrêté du 30 janvier 2017 - art. 1
 	  - Code des transports - art. R5352-5 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 5
+
+	**Cite**:
+
+	  - Code des transports - art. L2122-10 (V)
 
 	**Codifié par**:
 
