--- a/01. PARTIE LEGISLATIVE/Article L2102-7 - 29332279.md
+++ b/01. PARTIE LEGISLATIVE/Article L2102-7 - 29332279.md
@@ -4,7 +4,7 @@ La SNCF est dotée d'un conseil de surveillance et d'un directoire. Le dernier a
 juillet 1983 relative à la démocratisation du secteur public n'est pas applicable au conseil de surveillance de la SNCF. 
 
 Pour l'application à la SNCF du chapitre II du titre II de la loi n° 83-675 du 26 juillet 1983 précitée, SNCF Réseau et SNCF
-Mobilités sont assimilés à des filiales, au sens du 4 de l'article 1er de la même loi. 
+Mobilités sont assimilés à des filiales, au sens      de l'article 14 de la même loi. 
 
 Les statuts de la SNCF sont fixés par décret en Conseil d'Etat. Le nombre des représentants de l'Etat ne peut être inférieur
 à la moitié du nombre de membres du conseil de surveillance. Au moins deux membres du conseil de surveillance sont des
@@ -16,9 +16,9 @@ Un député et un sénateur sont membres du conseil de surveillance.
 	**Cite**:
 
 	  - Loi n°83-675 du 26 juillet 1983
-	  - Loi n°83-675 du 26 juillet 1983 - art. 1 (V)
+	  - Loi n°83-675 du 26 juillet 1983 - art. 1
 	  - Loi n°83-675 du 26 juillet 1983 - art. 5
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 1
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 13
