--- a/01. PARTIE LEGISLATIVE/Article L2122-11 - 23084576.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-11 - 23084576.md
@@ -1,16 +1,20 @@
 # Article L2122-11
 
-L'utilisation de l'infrastructure donne lieu à la passation d'un contrat entre le bénéficiaire d'un sillon et le gestionnaire
-d'infrastructure et à la perception d'une redevance par ce dernier. Les capacités de l'infrastructure disponible ne peuvent,
-une fois affectées à un candidat, être transférées par le bénéficiaire à une autre entreprise ou un autre service. Tout
-transfert de capacités d'infrastructure à titre onéreux ou gratuit est interdit et entraîne l'exclusion de l'attribution
-ultérieure de capacités.
+Un candidat au sens du présent livre est une entreprise ferroviaire, un regroupement international d'entreprises ferroviaires
+ou toute autre personne ayant des raisons commerciales ou de service public d'acquérir des capacités de l'infrastructure,
+telle qu'un opérateur de transport combiné, un port, un chargeur, un transitaire ou une autorité organisatrice de transport
+ferroviaire. 
+
+Les demandes visant à l'obtention de telles capacités sont introduites par les candidats. Afin d'utiliser ces capacités, les
+candidats qui ne sont pas des entreprises ferroviaires désignent l'entreprise ferroviaire bénéficiaire qui conclura le
+contrat mentionné à l'alinéa suivant. 
+
+L'utilisation de l'infrastructure donne lieu à la passation d'un contrat entre l'entreprise ferroviaire bénéficiaire d'un
+sillon et le gestionnaire d'infrastructure, sans préjudice du droit des autres candidats à conclure un accord avec le
+gestionnaire de l'infrastructure portant sur l'attribution de sillons. Les conditions auxquelles sont soumis ces accords sont
+non discriminatoires et transparentes.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), alinéa 10, paragraphe IV
 
 	**Cité par**:
 
@@ -21,6 +25,10 @@ ultérieure de capacités.
 	  - Code des transports - art. L2122-12 (V)
 	  - Code des transports - art. L2122-2 (V)
 	  - Code des transports - art. L2123-2 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Codifié par**:
 
