--- a/01. PARTIE LEGISLATIVE/Article L2122-12 - 23084574.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-12 - 23084574.md
@@ -1,18 +1,21 @@
 # Article L2122-12
 
-D'autres personnes que les entreprises ferroviaires peuvent être autorisées à demander l'attribution de sillons en vue de les
-mettre à la disposition d'une entreprise ferroviaire. Une telle mise à disposition des sillons qui leur sont attribués à une
-entreprise ferroviaire ne constitue pas un transfert prohibé au sens de l'article L. 2122-11.
+Les capacités d'infrastructure disponibles ne peuvent, une fois affectées à un candidat, être transférées par ce candidat à
+une autre entreprise ou un autre service. Tout transfert de capacités d'infrastructure à titre onéreux ou gratuit est
+interdit et entraîne l'exclusion de l'attribution ultérieure de capacités. 
+
+La mise à la disposition d'une entreprise ferroviaire de sillons attribués à un candidat telle que prévue à l'article L.
+2122-11 ne constitue pas un transfert prohibé.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), alinéa 11, paragraphe IV
 
 	**Cité par**:
 
 	  - Décret n°2003-194 du 7 mars 2003 - art. 19 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Cite**:
 
