--- a/01. PARTIE LEGISLATIVE/Article L2122-3 - 23084596.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-3 - 23084596.md
@@ -1,20 +1,20 @@
 # Article L2122-3
 
 Au sens du présent titre, on entend par " capacités de l'infrastructure " la possibilité de programmer des sillons sollicités
-pour un segment de l'infrastructure pendant une certaine période. 
+pour une section de l'infrastructure pendant une certaine période. 
 
-On entend par " sillon " la capacité d'infrastructure requise pour faire circuler un train donné d'un point à un autre à un
-moment donné.
+On entend par " sillon " la capacité d'infrastructure requise pour faire circuler un train donné d'un point à un autre au
+cours d'une période donnée.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), alinéa 2, paragraphe I
 
 	**Cité par**:
 
 	  - Décret n°2003-194 du 7 mars 2003 - art. préliminaire (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Codifié par**:
 
