--- a/01. PARTIE LEGISLATIVE/Article L2122-4 - 23084592.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-4 - 23084592.md
@@ -1,11 +1,15 @@
 # Article L2122-4
 
 La gestion de l'infrastructure ferroviaire est comptablement séparée de l'exploitation des services de transport ferroviaire.
-Aucune aide publique versée à une de ces activités ne peut être affectée à l'autre. Lorsqu'une entreprise exerce des
-activités d'exploitation de services de transport ferroviaire et de gestion de l'infrastructure ferroviaire, elle est tenue,
-lors du dépôt des comptes annuels au registre du commerce et des sociétés, de déposer également les comptes de profits et
-pertes séparés et des bilans séparés, en distinguant dans chacun de ces documents les éléments relatifs, d'une part, aux
-activités d'exploitation de services de transport ferroviaire et, d'autre part, à la gestion de l'infrastructure ferroviaire.
+Aucun fonds public versé à l'une de ces activités ne peut être affecté à l'autre. Les entreprises qui exercent des activités
+d'exploitation de services de transport ferroviaire et de gestion de l'infrastructure ferroviaire sont tenues de déposer tous
+les ans au registre du commerce et des sociétés des comptes séparés complets, comprenant bilan, compte de résultat et
+annexes. Ces comptes séparés distinguent, dans chacun de ces documents, les éléments relatifs, d'une part, aux activités
+d'exploitation de services de transport ferroviaire et, d'autre part, à la gestion de l'infrastructure ferroviaire.
+
+Les comptes sont tenus de façon à permettre le suivi de l'interdiction de transférer des fonds publics d'une activité à une
+autre et le contrôle de l'emploi des recettes tirées des redevances d'infrastructure et des excédents dégagés par d'autres
+activités commerciales.
 
 **Liens relatifs à cet article**
 
@@ -15,7 +19,7 @@ activités d'exploitation de services de transport ferroviaire et, d'autre part,
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Cité par**:
 
