--- a/01. PARTIE LEGISLATIVE/Article L2122-4-2 - 29332823.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-4-2 - 29332823.md
@@ -1,19 +1,18 @@
 # Article L2122-4-2
 
-Tout gestionnaire d'infrastructure prend des mesures d'organisation interne pour assurer le respect par son personnel de
-l'interdiction de divulgation des informations mentionnées à l'article L. 2122-4-1. Un décret en Conseil d'Etat définit ces
-mesures.
+L'utilisation de l'infrastructure ferroviaire donne lieu à la perception, par le gestionnaire d'infrastructure, de redevances
+d'infrastructure qu'il affecte au financement de ses activités. 
+
+Sans préjudice de l'article L. 2111-25, les principes et les procédures générales applicables à la tarification de
+l'infrastructure ferroviaire sont fixés par voie réglementaire, sous réserve des actes des commissions intergouvernementales
+compétentes.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
-	**Liens**:
+	**Cite**:
 
-	  - TRANSFERE: ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
-
-	**Nouveaux textes**:
-
-	  - Code des transports - art. L2122-4-5 (V)
+	  - Code des transports - art. L2111-25 (VT)
