--- a/01. PARTIE LEGISLATIVE/Article L2122-5 - 23084590.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-5 - 23084590.md
@@ -1,18 +1,31 @@
 # Article L2122-5
 
-Le gestionnaire d'infrastructure publie chaque année un document de référence du réseau qui décrit les caractéristiques de
-l'infrastructure mise à disposition des entreprises ferroviaires, les tarifs des prestations offertes, les règles de
-répartition des capacités, ainsi que les informations nécessaires à l'exercice des droits d'accès au réseau.
+Le gestionnaire d'infrastructure assurant la fonction de répartition des capacités de l'infrastructure ferroviaire publie
+chaque année un document de référence du réseau qui décrit les caractéristiques de l'infrastructure mise à disposition des
+entreprises ferroviaires, les tarifs des prestations offertes, les règles de répartition des capacités, ainsi que les
+informations nécessaires à l'exercice des droits d'accès au réseau. Ce document précise les mesures prises par le
+gestionnaire d'infrastructure en matière de répartition et de tarification des infrastructures ferroviaires pour les services
+de transport ferroviaire internationaux, dans le cadre de la coopération mentionnée à l'article L. 2122-4-6. Son contenu, en
+français et dans au moins une autre langue officielle de l'Union européenne, est mis gratuitement à disposition sous forme
+électronique. 
 
-Le gestionnaire d'infrastructure d'un réseau sur lequel une seule entreprise circule et n'effectue que des services de
-marchandises est dispensé d'établir le document de référence du réseau tant qu'il n'existe pas d'autre demandeur de capacité
-dudit réseau que cette entreprise.
+Le gestionnaire d'infrastructure assurant la fonction de répartition des capacités de l'infrastructure ferroviaire d'un
+réseau sur lequel une seule entreprise circule et n'effectue que des services de marchandises est dispensé d'établir le
+document de référence du réseau tant qu'il n'existe pas d'autre demandeur de capacité dudit réseau que cette entreprise. 
+
+Le gestionnaire d'infrastructure n'assurant pas la fonction de répartition des capacités de l'infrastructure ferroviaire
+transmet au gestionnaire d'infrastructure qui l'assure les éléments mentionnés au premier alinéa qui relèvent de sa
+compétence afin que ce dernier les intègre au document de référence du réseau.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), alinéas 13 et 14, paragraphe V
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
+
+	**Cite**:
+
+	  - Code des transports - art. L2122-4-6 (VT)
 
 	**Cité par**:
 
