--- a/01. PARTIE LEGISLATIVE/Article L2122-6 - 23084588.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-6 - 23084588.md
@@ -1,14 +1,15 @@
 # Article L2122-6
 
-Tout demandeur de sillons peut conclure avec le gestionnaire d'infrastructure un accord-cadre précisant les caractéristiques
-des capacités d'infrastructure ferroviaire qui lui sont offertes pour une durée déterminée tenant compte, le cas échéant, de
-l'existence de contrats commerciaux, d'investissements particuliers ou de risques.
+Tout candidat peut conclure avec le gestionnaire d'infrastructure assurant la fonction de répartition des capacités de celle-
+ci un accord-cadre précisant les caractéristiques des capacités d'infrastructure ferroviaire qui lui sont offertes pour une
+durée déterminée tenant compte, le cas échéant, de l'existence de contrats commerciaux, d'investissements particuliers ou de
+risques.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), alinéa 15, paragraphe VI
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Cité par**:
 
