--- a/01. PARTIE LEGISLATIVE/Article L2122-8 - 23084584.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-8 - 23084584.md
@@ -1,16 +1,12 @@
 # Article L2122-8
 
-Les modalités d'application des articles L. 2122-4 à L. 2122-7 sont fixées par voie réglementaire.
+Les modalités d'application de la présente section sont fixées par voie réglementaire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), dernier alinéa
-
-	**Cite**:
-
-	  - Code des transports - art. L2122-4 (V)
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
 
 	**Codifié par**:
 
