--- a/01. PARTIE LEGISLATIVE/Article L2123-2 - 23084564.md
+++ b/01. PARTIE LEGISLATIVE/Article L2123-2 - 23084564.md
@@ -1,18 +1,22 @@
 # Article L2123-2
 
-L'utilisation par une entreprise ferroviaire des gares et de toutes autres infrastructures de service donne lieu à la
-passation d'un contrat avec le gestionnaire de la gare.
+L'utilisation d'une installation de service par une entreprise ferroviaire ou par un autre candidat défini à l'article L.
+2122-11 et la fourniture des services dans cette installation donnent lieu à la passation d'un contrat avec son exploitant.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), alinéa 8, paragraphe IV
 
 	**Cité par**:
 
 	  - Décret n°2003-194 du 7 mars 2003 - art. 14-1 (V)
 	  - Décret n°2012-70 du 20 janvier 2012 - art. 10 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 4
+
+	**Cite**:
+
+	  - Code des transports - art. L2122-11 (V)
 
 	**Codifié par**:
 
