--- a/01. PARTIE LEGISLATIVE/Article L2123-3 - 23084562.md
+++ b/01. PARTIE LEGISLATIVE/Article L2123-3 - 23084562.md
@@ -1,15 +1,11 @@
 # Article L2123-3
 
-Un décret en Conseil d'Etat précise pour les gares et toutes autres infrastructures de services la nature des prestations
-minimales ou complémentaires dont toute entreprise ferroviaire autorisée à réaliser des services de transport peut demander
-la fourniture et les principes de tarification applicables à ces prestations.
-
-Il détermine les conditions dans lesquelles les autorités organisatrices de transport ferroviaire sont consultées, pour les
-gares d'intérêt national, sur les projets d'investissements de développement et de renouvellement dans les gares de voyageurs
-desservies dans le cadre de services de transport organisés par ces autorités. Il définit également les conditions dans
-lesquelles les autorités organisatrices de transport ferroviaire peuvent décider, par convention avec SNCF Mobilités et SNCF
-Réseau, de réaliser des projets d'investissements de développement et de renouvellement dans les autres gares de voyageurs
-relevant du ressort territorial de ces autorités organisatrices.
+Un décret en Conseil d'Etat détermine les conditions dans lesquelles les autorités organisatrices de transport ferroviaire
+sont consultées, pour les gares d'intérêt national, sur les projets d'investissements de développement et de renouvellement
+dans les gares de voyageurs desservies dans le cadre de services de transport organisés par ces autorités. Il définit
+également les conditions dans lesquelles les autorités organisatrices de transport ferroviaire peuvent décider, par
+convention avec SNCF Mobilités et SNCF Réseau, de réaliser des projets d'investissements de développement et de
+renouvellement dans les autres gares de voyageurs relevant du ressort territorial de ces autorités organisatrices.
 
 **Liens relatifs à cet article**
 
@@ -19,4 +15,4 @@ relevant du ressort territorial de ces autorités organisatrices.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 4
