--- a/01. PARTIE LEGISLATIVE/Article L2132-13 - 23084484.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-13 - 23084484.md
@@ -6,8 +6,8 @@ budget sur proposition de l'Autorité de régulation des activités ferroviaires
 
 Ce droit comprend, selon le cas : 
 
-1° Une part du montant des redevances d'utilisation du réseau ferré national versées au gestionnaire du réseau ferré national
-mentionné à l'article L. 2111-9, dans la limite de cinq millièmes de ce montant ; 
+1° Une part du montant des redevances d'infrastructure liées à l'utilisation du réseau ferré national versées au gestionnaire
+du réseau ferré national mentionné à l'article L. 2111-9, dans la limite de cinq millièmes de ce montant ; 
 
 2° Une somme proportionnelle au nombre de kilomètres parcourus sur les autres lignes du réseau ferroviaire, dans la limite de
 0,10 € par kilomètre parcouru. 
@@ -28,15 +28,16 @@ de l'article 46 de la loi n° 2011-1977 du 28 décembre 2011 de finances pour 20
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Modifié par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
-
 	**Cite**:
 
-	  - Code des transports - art. L2111-9 (VD)
+	  - Loi n°2011-1977 du 28 décembre 2011 - art. 46 (VT)
+	  - Code des transports - art. L2111-9
 	  - Code des transports - art. L2122-1
-	  - Code des transports - art. L2221-6 (VD)
+	  - Code des transports - art. L2221-6
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cité par**:
 
