--- a/01. PARTIE LEGISLATIVE/Article L2133-1 - 23084480.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-1 - 23084480.md
@@ -5,12 +5,13 @@ l'Autorité de régulation des activités ferroviaires vérifie, à la demande d
 entreprises ferroviaires concernées, que le transport de voyageurs entre des gares situées dans des Etats membres différents
 constitue l'objet principal du service conformément à l'article L. 2121-12. Elle se prononce également sur l'existence
 éventuelle d'une atteinte à l'équilibre économique d'un contrat de service public par ces dessertes intérieures, à la demande
-de l'autorité administrative compétente, de l'autorité qui a attribué ledit contrat, du gestionnaire ou de l'entreprise
-ferroviaire qui exécute le contrat, afin de permettre à l'autorité organisatrice compétente de limiter ou, le cas échéant,
-d'interdire ces dessertes intérieures, conformément à l'article L. 2121-12.
+de l'autorité administrative compétente, de l'autorité qui a attribué ledit contrat, du gestionnaire d'infrastructure ou de
+l'entreprise ferroviaire qui exécute le contrat, afin de permettre à l'autorité organisatrice compétente de limiter ou, le
+cas échéant, d'interdire ces dessertes intérieures, conformément à l'article L. 2121-12.
 
-La décision motivée de l'Autorité de régulation des activités ferroviaires est prise dans un délai de six semaines à compter
-de la réception de toutes les informations utiles à l'instruction. Elle est susceptible de recours devant le Conseil d'Etat.
+Les décisions de l'Autorité de régulation des activités ferroviaires sont prises dans un délai de six semaines à compter de
+la réception de toutes les informations utiles à l'instruction et notifiés au demandeur. Elles sont susceptibles de recours
+devant le Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
@@ -20,7 +21,7 @@ de la réception de toutes les informations utiles à l'instruction. Elle est su
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 10
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cité par**:
 
@@ -29,4 +30,4 @@ de la réception de toutes les informations utiles à l'instruction. Elle est su
 
 	**Cite**:
 
-	  - Code des transports - art. L2121-12 (VD)
+	  - Code des transports - art. L2121-12 (V)
