--- a/01. PARTIE LEGISLATIVE/Article L2133-4 - 23084474.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-4 - 23084474.md
@@ -1,16 +1,18 @@
 # Article L2133-4
 
 L'Autorité de régulation des activités ferroviaires approuve, après avis de l'Autorité de la concurrence, les règles de la
-séparation comptable prévue aux articles L. 2122-4, L. 2123-1, L. 2144-1 et L. 2144-2, les règles d'imputation, les
-périmètres comptables et les principes régissant les relations financières entre les activités comptablement séparées, qui
-sont proposés par les opérateurs. Elle veille à ce que ces règles, périmètres et principes ne permettent aucune
-discrimination, subvention croisée ou distorsion de concurrence. Les modifications de ces règles, périmètres et principes
-sont approuvées dans les mêmes conditions.
+séparation comptable prévue aux articles L. 2122-4, L. 2123-1-1,
+L. 2144-1 et L. 2144-2, les règles d'imputation, les périmètres comptables et les principes régissant les relations
+financières entre les activités comptablement séparées, qui sont proposés par les opérateurs. Elle veille à ce que ces
+règles, périmètres et principes ne permettent aucune discrimination, subvention croisée ou distorsion de concurrence. Les
+modifications de ces règles, périmètres et principes sont approuvées dans les mêmes conditions. 
 
 Aux fins de vérification et de contrôle de l'effectivité de la séparation comptable prévue aux mêmes articles L. 2122-4, L.
-2123-1, L. 2144-1 et L. 2144-2, l'Autorité de régulation des activités ferroviaires peut recueillir, auprès des entreprises
-qui exercent des activités de gestion de l'infrastructure ferroviaire, de gestion d'infrastructures de service ou
-d'entreprise ferroviaire, toutes les informations comptables qu'elle estime nécessaires. 
+2123-1-1, L. 2144-1 et L. 2144-2, l'Autorité de régulation des activités ferroviaires peut recueillir, auprès des entreprises
+qui exercent des activités de gestion de l'infrastructure ferroviaire, d'exploitation d'installations de service ou
+d'entreprise ferroviaire, toutes les informations comptables qu'elle estime nécessaires, notamment celles énumérées à
+l'annexe VIII de la directive 2012/34/ UE du Parlement européen et du Conseil du 21 novembre 2012 établissant un espace
+ferroviaire unique européen (refonte). 
 
 L'Autorité de régulation des activités ferroviaires informe les services de l'Etat compétents des irrégularités potentielles
 en matière d'aides d'Etat constatées dans l'exercice de ses attributions.
@@ -28,10 +30,10 @@ en matière d'aides d'Etat constatées dans l'exercice de ses attributions.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
 
 	**Cite**:
 
 	  - Code des transports - art. L2122-4
-	  - Code des transports - art. L2123-1
-	  - Code des transports - art. L2144-1
+	  - Code des transports - art. L2123-1-1 (V)
+	  - Code des transports - art. L2144-1 (V)
