--- a/01. PARTIE LEGISLATIVE/Article L2144-1 - 23084281.md
+++ b/01. PARTIE LEGISLATIVE/Article L2144-1 - 23084281.md
@@ -1,15 +1,14 @@
 # Article L2144-1
 
 Des comptes de profits et pertes et, soit des bilans, soit des bilans financiers annuels décrivant l'actif et le passif, sont
-tenus et publiés pour les activités relatives à la fourniture des services de transport ferroviaire de fret. Lorsqu'un groupe
-d'entreprises publiant une comptabilité consolidée ou une entreprise exploite plusieurs services de transport ferroviaire de
-fret, la gestion de ces services fait l'objet d'une comptabilité séparée, le cas échéant consolidée au niveau du groupe.
+tenus et publiés, d'une part, pour les activités relatives à la fourniture des services de transport ferroviaire de fret et,
+d'autre part, pour les activités relatives à la fourniture des services de transport ferroviaire de personnes. 
+
+Lorsqu'un groupe d'entreprises publiant une comptabilité consolidée ou une entreprise exploite plusieurs services de
+transport ferroviaire de fret, la gestion de ces services fait l'objet d'une comptabilité séparée, le cas échéant consolidée
+au niveau du groupe.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17-1 (Ab), alinéa 5, paragraphe III
 
 	**Cité par**:
 
@@ -17,6 +16,10 @@ fret, la gestion de ces services fait l'objet d'une comptabilité séparée, le 
 	  - Décret n°2015-138 du 10 février 2015 - art. 37 (V)
 	  - Code des transports - art. L2131-7 (T)
 	  - Code des transports - art. L2133-4 (VD)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 12
 
 	**Codifié par**:
 
