--- a/01. PARTIE LEGISLATIVE/Article L2151-1 - 23084272.md
+++ b/01. PARTIE LEGISLATIVE/Article L2151-1 - 23084272.md
@@ -2,13 +2,14 @@
 
 Le règlement (CE) n° 1371/2007 du Parlement européen et du Conseil du 23 octobre 2007 sur les droits et obligations des
 voyageurs ferroviaires s'applique aux voyages et services ferroviaires pour lesquels une entreprise doit avoir obtenu une
-licence conformément à la directive 95/18/CE du Conseil du 19 juin 1995 concernant les licences des entreprises ferroviaires.
+licence conformément à la directive 2012/34/UE du Parlement européen et du Conseil du 21 novembre 2012 établissant un espace
+ferroviaire unique européen (refonte).
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 3 (Ab), alinéa 1, paragraphe I
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 35
 
 	**Cité par**:
 
@@ -19,7 +20,3 @@ licence conformément à la directive 95/18/CE du Conseil du 19 juin 1995 concer
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Cite**:
-
-	  - règlement (CE) n°1371/2007
