--- a/01. PARTIE LEGISLATIVE/Article L2241-2 - 23084154.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-2 - 23084154.md
@@ -1,15 +1,15 @@
 # Article L2241-2
 
-Pour l'établissement des procès-verbaux, les agents de l'exploitant mentionnés aux 3° à 5° du I de l'article L. 2241-1 sont
-habilités selon les cas à recueillir ou à relever l'identité et l'adresse du contrevenant, dans les conditions prévues par
-l'article 529-4 du code de procédure pénale. 
+Pour l'établissement des procès-verbaux, les agents    mentionnés aux 3° à 5° du I de l'article L. 2241-1 sont habilités
+selon les cas à recueillir ou à relever l'identité et l'adresse du contrevenant, dans les conditions prévues par l'article
+529-4 du code de procédure pénale. 
 
 Si le contrevenant refuse ou se déclare dans l'impossibilité de justifier de son identité, les agents mentionnés au premier
 alinéa du II de l'article 529-4 du code de procédure pénale en avisent sans délai et par tout moyen un officier de police
-judiciaire territorialement compétent.
+judiciaire territorialement compétent. 
 
 Pendant le temps nécessaire à l'information et à la décision de l'officier de police judiciaire, le contrevenant est tenu de
-demeurer à la disposition d'un agent visé au même premier alinéa.
+demeurer à la disposition d'un agent visé au même premier alinéa. 
 
 Sur l'ordre de l'officier de police judiciaire, les agents peuvent conduire l'auteur de l'infraction devant lui ou bien le
 retenir le temps nécessaire à son arrivée ou à celle d'un agent de police judiciaire agissant sous son contrôle.
@@ -22,9 +22,9 @@ retenir le temps nécessaire à son arrivée ou à celle d'un agent de police ju
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 21
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 15
 
 	**Cite**:
 
-	  - Code de procédure pénale - art. 529-4
-	  - Code des transports - art. L2241-1 (VD)
+	  - Code de procédure pénale - art. 529-4 (M)
+	  - Code des transports - art. L2241-1
