--- a/01. PARTIE LEGISLATIVE/Article L2242-7 - 23084123.md
+++ b/01. PARTIE LEGISLATIVE/Article L2242-7 - 23084123.md
@@ -1,15 +1,19 @@
 # Article L2242-7
 
 Est puni de six mois d'emprisonnement et de 7 500 € d'amende, l'outrage adressé à un agent d'un exploitant de réseau de
-transport public de personnes.
+transport public de personnes ou à un agent mentionné au 3° ou au 5° du I de l'article L. 2241-1. 
 
 Lorsqu'il est commis en réunion, l'outrage est puni d'un an d'emprisonnement et de 15 000 € d'amende.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi du 15 juillet 1845 - art. 26 (Ab)
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 16
+
+	**Cite**:
+
+	  - Code des transports - art. L2241-1 (V)
 
 	**Codifié par**:
 
