--- a/01. PARTIE LEGISLATIVE/Article L5351-4 - 23080235.md
+++ b/01. PARTIE LEGISLATIVE/Article L5351-4 - 23080235.md
@@ -3,8 +3,8 @@
 SNCF Réseau est tenu d'assurer le raccordement des voies ferrées portuaires au réseau ferré national dans des conditions
 techniques et financières fixées par décret en Conseil d'Etat.
 
-Pour chaque port, une convention entre l'autorité portuaire et SNCF Réseau, soumise à l'approbation ministérielle, fixe les
-conditions techniques et financières particulières de ce raccordement.
+Pour chaque port, une convention entre l'autorité portuaire et SNCF Réseau fixe les conditions techniques et financières
+particulières de ce raccordement.
 
 **Liens relatifs à cet article**
 
@@ -12,13 +12,13 @@ conditions techniques et financières particulières de ce raccordement.
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Modifié par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 24
-
 	**Cité par**:
 
 	  - Arrêté du 23 octobre 2014 - art. 2 (V)
 	  - Code des transports - art. L5723-1 (V)
 	  - Code des transports - art. L5753-2 (V)
 	  - Code des transports - art. R5352-1 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 5
